src/model/snapshots/rgr__model__item__tests__to_span_lines_line_wrapping-2.snap
---
source: src/model/item.rs
expression: new_item(RG_JSON_CONTEXT_LINE_WRAP).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "4:",
                style: Style {
                    fg: Some(
                        Yellow,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "123456789!123456789@123456789#123456789$123456789%123456789^123456789&12345678",
                style: Style {
                    fg: Some(
                        Yellow,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "9*123456789(123456789_a_context_line",
                style: Style {
                    fg: Some(
                        Yellow,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
