src/model/snapshots/rgr__model__item__tests__to_span_lines_line_wrapping_confirm_replacement.snap
---
source: src/model/item.rs
expression: new_item(RG_JSON_MATCH_LINE_WRAP).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "3:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "123456789!123456789@123456789#123456789$123456789%123456789^123456789&12345678",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "9*123456789(123456789_",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "foobar",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "_characters_wowzers",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
