src/model/snapshots/rgr__model__item__tests__to_span_lines_multiline_input_replacement_with_multiline_matches.snap
---
source: src/model/item.rs
expression: new_item(RG_JSON_MATCH_MULTILINE).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "3:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "baz ",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "1",
                style: Style {
                    fg: Some(
                        Red,
                    ),
                    bg: None,
                    add_modifier: CROSSED_OUT,
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "-:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "22",
                style: Style {
                    fg: Some(
                        Red,
                    ),
                    bg: None,
                    add_modifier: CROSSED_OUT,
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "-:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "333",
                style: Style {
                    fg: Some(
                        Red,
                    ),
                    bg: None,
                    add_modifier: CROSSED_OUT,
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "foobar",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "+:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "baz",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "+:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "asdf",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: " bar ",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "4444",
                style: Style {
                    fg: Some(
                        Red,
                    ),
                    bg: None,
                    add_modifier: CROSSED_OUT,
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "foobar",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "+:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "baz",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
    Spans(
        [
            Span {
                content: "+:",
                style: Style {
                    fg: Some(
                        DarkGray,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "asdf",
                style: Style {
                    fg: Some(
                        Green,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
